update index html and js files

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
                 <div class="seconddiv">
                     <h2 class="secondheading">Add your score</h2>
                     <form class="form">
-                        <input type="text" class="addinput" placeholder="Your name">
-                        <input type="text" class="addinput" placeholder="Your score">
+                        <input type="text" id="input1" class="addinput" placeholder="Your name" required>
+                        <input type="number" id="input2" class="addinput" placeholder="Your score" required>
                         <div class="submitdiv">
                            <button type="submit" class="submitbutton">submit</button>
                         </div>
