Add styles and sort data

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leaderboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+</head>
 <body>
     <section class="leaderboard">
         <div class="wrap">
@@ -14,7 +16,7 @@
                 <div class="firstdiv">
                     <div class="first1">
                       <h2 class="firstheading">Recent scores</h2>
-                      <button class="mainbutton">Refresh</button>
+                      <button class="mainbutton button">Refresh</button>
                     </div> 
                     <ul class="scores"></ul>                  
                 </div>
@@ -24,7 +26,7 @@
                         <input type="text" id="input1" class="addinput" placeholder="Your name" required>
                         <input type="number" id="input2" class="addinput" placeholder="Your score" required>
                         <div class="submitdiv">
-                           <button type="submit" class="submitbutton">submit</button>
+                           <button type="submit" class="submitbutton button">submit</button>
                         </div>
                     </form>
                 </div>
